# blunder

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  AlphaBeta_8cpp.html  Board_8cpp.html  Board_8h.html  Book_8cpp.html  Book_8h.html  CLIConfig_8cpp.html  CLIConfig_8h.html  CLIUtils_8cpp.html  CLIUtils_8h.html  CMakeLists.txt  CMakePresets.json  COMMIT_MSG.txt  CmdLineArgs_8cpp.html  CmdLineArgs_8h.html  CoachDispatcher_8cpp.html  CoachDispatcher_8h.html  CoachJson_8cpp.html  CoachJson_8h.html  Common_8cpp.html  Common_8h.html  Constants_8h.html  DualHeadNetwork_8cpp.html  DualHeadNetwork_8h.html  Evaluator_8cpp.html  Evaluator_8h.html  HACKING.md  Hash_8cpp.html  Hash_8h.html  InputDetect_8cpp.html  InputDetect_8h.html  Log_8h.html  LookupTables_8h.html  MCTS_8cpp.html  MCTS_8h.html  MiniMax_8cpp.html  MoveComparator_8cpp.html  (+114 more)
.github/workflows/: ci.yml  release.yml
.kiro/specs/benchmarking-infra/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/coaching-improvements/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/coaching-protocol/: design.md  requirements.md  tasks.md
.kiro/specs/code-quality-hardening/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/engine-evolution/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/hce-gm-strength/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/tapered-eval-port/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/uci-multipv/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: commit-checklist.md
cmake/: dev-mode.cmake  install-rules.cmake  profile.cmake  variables.cmake
docs/: ARCHITECTURE.md  CODE_REVIEW.md  blunder-improvements.md  coaching-protocol.md
scripts/: alphazero_loop.py  analyze-sts.py  bench-config.json  compare_nnue_vs_handcrafted.py  fetch-baseline.py  fetch-weights.py  parse_pgn_training.py  run-benchmarks.py  run-cutechess.py  run-cutechess.sh  run-tournament.py  train_alphazero.py  train_nnue.py
scripts/bench/: __init__.py  __main__.py  cli.py  compare.py  config.py  csv_store.py  elo_search.py  gauntlet.py  git_meta.py  parsers.py  run.py  run_all.py
source/: AlphaBeta.cpp  Board.cpp  Board.h  Book.cpp  Book.h  CLIConfig.cpp  CLIConfig.h  CLIUtils.cpp  CLIUtils.h  CmdLineArgs.cpp  CmdLineArgs.h  CoachDispatcher.cpp  CoachDispatcher.h  CoachJson.cpp  CoachJson.h  Common.h  Constants.h  DualHeadNetwork.cpp  DualHeadNetwork.h  Evaluation.cpp  Evaluator.cpp  Evaluator.h  Hash.cpp  Hash.h  InputDetect.cpp  InputDetect.h  Log.h  LookupTables.h  MCTS.cpp  MCTS.h  MiniMax.cpp  Move.h  MoveComparator.cpp  MoveComparator.h  MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorHyperbola.cpp  MoveGeneratorMagicBitboards.cpp  MoveList.cpp  MoveList.h  (+34 more)
test/: CMakeLists.txt
test/source/: TestAlgorithmEquivalence.cpp  TestBoard.cpp  TestBoardInvariance.cpp  TestBook.cpp  TestDrawDetection.cpp  TestEvaluation.cpp  TestFenRoundTrip.cpp  TestMove.cpp  TestMoveGenerator.cpp  TestMultiPV.cpp  TestNNUE.cpp  TestParser.cpp  TestPerft.cpp  TestPositions.cpp  TestSearch.cpp  TestSearchProperties.cpp  TestSee.cpp  TestTaperedEval.cpp  TestTestPositions.cpp  TestZobrist.cpp  Tests.h  TestsRunner.cpp
tests/: test_csv_store.py  test_git_meta.py  test_parsers.py
weights/: README.md
